feat: 添加 HiSem-SADP 文件类型校验，仅支持 Markdown 格式文档